classDiagram
    class Cliente {
        +String nome
        +String sobrenome
        +String email
        +String telefone
        +cadastrar()
    }

    class Agendamento {
        +String numeroReserva
        +Date data
        +Time horario
        +String statusPagamento
        +Double valorTotal
        +confirmarReserva()
        +gerarRecibo()
    }

    class Servico {
        +String idServico
        +String titulo
        +String descricao
        +Double preco
        +Boolean isProdutoFisico
    }

    class Profissional {
        +String idProfissional
        +String nome
        +String especialidade
        +ListarHorariosDisponiveis()
    }

    %% Relações (Multiplicidade)
    Cliente "1" --> "0..*" Agendamento : realiza
    Agendamento "0..*" --> "1" Profissional : alocado para
    Agendamento "1" --> "1..*" Servico : contém
